# diom-gear-academy

./: Cargo.toml  README.md
io/: Cargo.toml
io/src/: lib.rs
src/: lib.rs
test/: basic.rs
tests/: basic.rs
